Mise en place de la connection

--- a/views/admin.html.twig
+++ b/views/admin.html.twig
@@ -6,6 +6,10 @@
     <title>{{h1}}</title>
 </head>
 <body>
-    <p>{{username}}</p>
+{% if username is defined %}
+    <p>{{ username }}</p>
+  {% else %}
+    <a href="connexion">connexion</a>
+{% endif %}
 </body>
 </html>
