--- a/views/connexion.html.twig
+++ b/views/connexion.html.twig
@@ -10,30 +10,15 @@
     <h1>Connexion</h1>
     <form method="POST" action="">
       <!-- Champ mail -->
-      <div class="form-group">
-        <label for="mail">Mail :</label>
-        <input
-          type="email"
-          name="email"
-          id="email"
-          required
-        />
-      </div>
-
-      <!-- Champ nom d'utilisateur -->
-     
-
-      <!-- Champ mot de passe -->
-      <div class="form-group">
-        <label for="password">Mot de passe :</label>
-        <input
-          type="password"
-          name="password"
-          id="password"
-          required
-        />
-      </div>
-
+      <form method="POST" action="">
+    <div>
+        <label for="mail">Email :</label>
+        <input type="email" name="mail" id="mail" />
+    </div>
+    <div>
+        <label for="pass">Mot de passe :</label>
+        <input type="password" name="pass" id="pass" />
+    </div>
       <!-- Boutons -->
       <div class="form-actions">
         <button type="submit" class="btn">Connexion</button>
