--- a/views/connection.html.twig
+++ b/views/connection.html.twig
@@ -30,6 +30,10 @@
             </div>
         </div> 
     </div>
+    {% if error %}
+        <div style="color: red;">{{ error }}</div>
+    {% endif %}
+
     
 
 </body>
