mise en place de l'upload de fichier

--- a/views/connexion.html.twig
+++ b/views/connexion.html.twig
@@ -16,8 +16,8 @@
         <input type="email" name="mail" id="mail" />
     </div>
     <div>
-        <label for="pass">Mot de passe :</label>
-        <input type="password" name="pass" id="pass" />
+        <label for="password">Mot de passe :</label>
+        <input type="password" name="password" id="pass" />
     </div>
       <!-- Boutons -->
       <div class="form-actions">
